--- a/appsscript.json
+++ b/appsscript.json
@@ -7,6 +7,12 @@
         "version": "0",
         "libraryId": "1CRjWWWYfjD7WzPl43RB1BiD7XDLJmR03eEpXr2LMh75yAq5qMlczOIfm",
         "developmentMode": true
+      },
+      {
+        "userSymbol": "LandmasterLibraryGas",
+        "version": "0",
+        "libraryId": "1RT9wqSQIY82cdkNNP0Pz5TF0knsFDTr8b5MdpwHLMxgWoi2pw6y2E9Mk",
+        "developmentMode": true
       }
     ]
   },
